--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@tanstack/react-query": "^5.17.10",
+    "@tanstack/react-query-devtools": "^5.17.10",
+    "@tanstack/react-router": "^1.4.2",
+    "@tanstack/router-devtools": "^1.4.2",
+    "@tanstack/router-vite-plugin": "^1.4.2",
     "cross-env": "^7.0.3",
     "glob": "^10.3.10",
     "hono": "^3.12.3",
